2007-07-07  Darin Adler  <darin@apple.com>

        - updated results (I changed the test at the last minute, but didn't regenerate results)

        * fast/canvas/fill-stroke-clip-reset-path-expected.checksum: Updated.
        * fast/canvas/fill-stroke-clip-reset-path-expected.png: Updated.
        * fast/canvas/fill-stroke-clip-reset-path-expected.txt: Updated.

2007-07-07  Darin Adler  <darin@apple.com>

        - test for <rdar://problem/5292364> REGRESSION: ZX Spectrum 3.0 widget - graphic anomalies in widget window frame

        * fast/canvas/fill-stroke-clip-reset-path-expected.checksum: Added.
        * fast/canvas/fill-stroke-clip-reset-path-expected.png: Added.
        * fast/canvas/fill-stroke-clip-reset-path-expected.txt: Added.
        * fast/canvas/fill-stroke-clip-reset-path.html: Added.

2007-07-07  Rob Buis  <buis@kde.org>

        Reviewed by Darin.

        Testcase for:
        http://bugs.webkit.org/show_bug.cgi?id=8994
        Canvas doesn't reset on resize

        * fast/canvas/canvas-resize-reset-expected.checksum: Added.
        * fast/canvas/canvas-resize-reset-expected.png: Added.
        * fast/canvas/canvas-resize-reset-expected.txt: Added.
        * fast/canvas/canvas-resize-reset.html: Added.

2007-07-07  Alexey Proskuryakov  <ap@webkit.org>

        Fixed a mismatch between test output and expected results (a typo that was only fixed in the former).

        * fast/loader/early-load-cancel-expected.txt:

2007-07-07  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Maciej.

        http://bugs.webkit.org/show_bug.cgi?id=14525
        Support exslt:node-set()

        * fast/xsl/exslt-node-set-expected.txt: Added.
        * fast/xsl/exslt-node-set.xml: Added.
        * fast/xsl/exslt-node-set.xsl: Added.

2007-07-06  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Oliver.

        - test case for <rdar://problem/5133420> ASSERT in WebDocumentLoaderMac::decreaseLoadCount() un-discarding Gmail message
        