@@ -829,7 +829,11 @@ void Window::put(ExecState* exec, const Identifier& propertyName, JSValue* value
 {
   const HashEntry* entry = Lookup::findEntry(&WindowTable, propertyName);
   if (entry) {
-    switch(entry->value) {
+    if (entry->attr & ReadOnly)
+       // readonly! Can't put!
+       return;
+
+    switch (entry->value) {
     case Status:
       m_frame->setJSStatusBarText(value->toString(exec));
       return;
